--- a/styles/blog.css
+++ b/styles/blog.css
@@ -26,6 +26,12 @@ body {
   color: #111;
 }
 
+body .learning {
+  font-size: 1.5rem;
+  font-family: "Lato", sans-serif;
+  color: #111;
+}
+
 /************************************
 *********HEADER STYLES***************
 ************************************/
@@ -52,6 +58,12 @@ header h1 i {
   font-size: 3rem;
 }
 
+h2 i {
+  color: orange;
+  text-shadow: none;
+  font-size: 4rem;
+  margin-right: 2rem;
+}
 /************************************
 ***********MAIN STYLES***************
 ************************************/
@@ -119,6 +131,19 @@ main {
   background-position: center;
 }
 
+.course-img3 {
+  margin-left: auto;
+  max-width: 100%;
+  height: 500px;
+  background-image: url("../images/roman-synkevych-vXInUOv1n84-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.fa-road {
+  margin-top: 5rem;
+}
 /* .course-img2 img {
   max-width: 100%;
   border-radius: 4px;
