create emotional-intelligence.html blog

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -145,6 +145,23 @@ main {
   background-position: center;
 }
 
+.course-img4 {
+  margin-left: auto;
+  max-width: 100%;
+  height: 400px;
+  background-image: url("../images/tengyart-_VkwiVNCNfo-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.course-img5 {
+  height: 300px;
+  background-color: #cccccc;
+  background-image: url(../images/hello-i-m-nik-zYdYz7JlevE-unsplash.jpg);
+  margin-top: 100px;
+  background-size: cover;
+}
 /* .fa-road {
   margin-top: 5rem;
 } */
@@ -301,7 +318,7 @@ h3 {
   margin-left: 150px;
   font-weight: bold;
   box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.75);
-  cursor: pointer;
+  /* cursor: pointer; */
   transition: box-shadow 0.2s ease-in-out, background 0.2s ease-in-out,
     color 0.2s ease-in;
   filter: drop-shadow(3px 10px 4px #eae2b7);
@@ -351,6 +368,21 @@ h3 {
   display: inline-block;
   justify-content: space-between;
   align-items: center;
+}
+
+.eq-value li {
+  padding-left: 27px;
+  margin-bottom: 0;
+  background: url(../images/rec.svg) 0px 10px no-repeat;
+  background-size: 17px auto;
+}
+
+.timedate {
+  float: right;
+  font-size: 1.2rem;
+  font-family: "Lato", sans-serif;
+  color: #aca4a4;
+  margin: 20px 12px;
 }
 /************************************
 *********FOOTER STYLES***************
