--- a/styles/blog.css
+++ b/styles/blog.css
@@ -23,8 +23,9 @@ html {
 body {
   font-size: 1rem;
   font-family: "Lato", sans-serif;
-  color: #111;
+  color: #212121;
   height: 100%;
+  background-color: #ededed;
 }
 
 body .learning {
@@ -42,11 +43,15 @@ body .learning {
 ************************************/
 
 header {
-  background-color: #111;
+  background-color: #6c4a4a;
   color: #fff;
   text-align: center;
-  padding: 2rem;
+  padding: 15rem 2rem;
   box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
+}
+#header-style h1 {
+  font-size: 40px;
+  font-weight: 700;
 }
 
 header h1 {
@@ -58,7 +63,7 @@ header h1 {
 }
 
 header h1 i {
-  color: orange;
+  color: #ff9292;
   text-shadow: none;
   font-size: 3rem;
   margin-right: 2rem;
@@ -69,7 +74,7 @@ section h2 i {
 }
 
 h2 i {
-  color: orange;
+  color: #ff9292;
   text-shadow: none;
   font-size: 4rem;
 }
@@ -252,6 +257,16 @@ main {
   background-position: center bottom;
 }
 
+.course-head-img11 {
+  margin-left: auto;
+  max-width: 100%;
+  height: 500px;
+  background-image: url("../images/billow926-DHyIWBm8NGc-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  margin: 0px 50px;
+}
 /* .fa-road {
   margin-top: 5rem;
 } */
@@ -271,7 +286,7 @@ main {
 .employable-skills {
   padding: 4rem 2rem;
   margin-bottom: 4rem;
-  background-color: #111;
+  background-color: #ff7777;
   color: #fff;
   transform: skewY(-7deg);
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
@@ -492,7 +507,7 @@ h3 {
   margin-bottom: 2rem;
   background: url(../images/streamline-icon-wildlife-protection-shield@48x48.png)
     0px 10px no-repeat;
-  background-size: 22px auto;
+  background-size: 25px auto;
   list-style-type: none;
   /* line-height: 4rem; */
 }
@@ -513,7 +528,7 @@ footer {
   margin-top: 50px;
   padding: 1rem;
   /* background: linear-gradient(#fff, #f3f3f3); */
-  background-color: #111;
+  background-color: #6c4a4a;
   color: #fff;
 }
 
@@ -539,6 +554,167 @@ footer p {
 footer p span {
   display: block;
   margin: 1rem 0;
+}
+
+/************************************
+*********Navigation STYLES***********
+************************************/
+
+/* body #wrapper {
+  width: 100%;
+}
+body #wrapper ul {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+  height: 118px;
+  background-color: #fff;
+  font-size: 0px;
+}
+body #wrapper ul:hover li {
+  width: 13.33333%;
+}
+body #wrapper ul li {
+  display: inline-block;
+  float: left;
+  width: 16.66667%;
+  -moz-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+  text-align: center;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  text-shadow: 0px 1px 3px white;
+  border-right: thin solid lightgray;
+}
+body #wrapper ul li:last-child {
+  border-right: none;
+}
+body #wrapper ul li:hover {
+  background: #e6e6e6;
+  width: 33.33333%;
+  -moz-box-shadow: inset 10px 10px 10px -10px rgba(0, 0, 0, 0.3),
+    inset -10px 10px 10px -10px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 10px 10px 10px -10px rgba(0, 0, 0, 0.3),
+    inset -10px 10px 10px -10px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 10px 10px 10px -10px rgba(0, 0, 0, 0.3),
+    inset -10px 10px 10px -10px rgba(0, 0, 0, 0.3);
+}
+body #wrapper ul li a {
+  display: block;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-top: 19px;
+  height: 118px;
+  text-decoration: none;
+  font-size: 38px;
+  color: gray;
+}
+body #wrapper ul li a:visited {
+  color: gray;
+}
+body #wrapper ul li div {
+  margin-top: 5px;
+  font-weight: 600;
+  font-size: 13px;
+} */
+
+/* #ffe699
+#852747
+
+#ff9292 */
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #ff9292;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 25px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Add an active class to highlight the current page */
+.active {
+  background-color: #c89595;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+}
+
+/* Dropdown container - needed to position the dropdown content */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Style the dropdown button to fit inside the topnav */
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+.dropdown .dropbtn i {
+  padding-left: 8px;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Style the links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  background-color: #ff9292;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a dark background on topnav links and the dropdown button on hover */
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #aaa492;
+  color: white;
+}
+
+/* Add a grey background to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #aaa492;
+  color: white;
+}
+
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 /* _________________________________________
@@ -615,5 +791,45 @@ ____________________________________________*/
   main {
     max-width: 80%;
     margin-top: 2rem;
+  }
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child),
+  .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {
+    float: none;
+  }
+  .topnav.responsive .dropdown-content {
+    position: relative;
+  }
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
   }
 }
